Fix the spacing for player-2 card in mobile

--- a/src/app/shared/components/player-card/player-card.component.css
+++ b/src/app/shared/components/player-card/player-card.component.css
@@ -70,6 +70,7 @@
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        gap: 8px;
     }
 
     .c-player-card__icon--player-1 {
